# anima-verse

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  pyproject.toml  queue_cli.py  start.sh
app/: server.py
app/core/: __init__.py  activity_engine.py  agent_inbox.py  agent_loop.py  auth_dependency.py  avatar_activity_detect.py  avatar_mood_detect.py  background_queue.py  beszel.py  channel_health.py  character_evolution.py  character_io.py  character_validation.py  chat_engine.py  chat_task_manager.py  config.py  config_schema.py  config_validator.py  danger_system.py  db.py  dependencies.py  event_images.py  event_loop_watchdog.py  expression_pose_maps.py  expression_regen.py  i18n.py  image_postprocess.py  intent_engine.py  llm_client.py  llm_queue.py  llm_router.py  log.py  (+44 more)
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
docs/: config-defaults.md  env-defaults.md  llm-templates.md  llm_templates_overview.md  plugins.md
face_service/: __init__.py  face_enhance.py  face_swap.py  server.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
migrations/: 2026-05-outfit-slots.py  2026-05-retrospect-enable.py
static/: script.js
templates/: index.html
workflows/: faceswap_reactor_api.json  img2video_workflow_api.json  img2video_workflow_lowram_api.json  multiswap_flux2_api.json  multiswap_flux2_v2_api.json  text2img_workflow_flux2_api.json  text2img_workflow_flux2_gguf_api.json  text2img_workflow_qwen_api.json  text2img_workflow_z-image_api.json  tts_voiceclone_workflow_api.json
(+338 files in other folders)
